// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  disabled: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  helpText: 'Hello jocker'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          Hello jocker
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  inputVerticalList: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio mg-input--vertical-list">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelColon: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-label colon="" identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelHide: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-label class="sr-only" identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelOnTop: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--label-on-top mg-input--radio">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio mg-input--readonly">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  required: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-label identifier="identifier" is-legend="" required="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" required="" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" required="" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" required="" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" required="" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="mg-input mg-input--radio">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="u">
            <label htmlfor="identifier_0">
              u
            </label>
            <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="i">
            <label htmlfor="identifier_1">
              i
            </label>
            <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="o">
            <label htmlfor="identifier_2">
              o
            </label>
            <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="a">
            <label htmlfor="identifier_3">
              a
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <fieldset class="is-focused mg-input mg-input--radio">
      <mg-label identifier="identifier" is-legend="">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <div>
            <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="batman">
            <label htmlfor="identifier_0">
              batman
            </label>
            <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="robin">
            <label htmlfor="identifier_1">
              robin
            </label>
            <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="jocker">
            <label htmlfor="identifier_2">
              jocker
            </label>
            <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="bane">
            <label htmlfor="identifier_3">
              bane
            </label>
          </div>
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
</mg-input-radio>
`;
